fix: code cleanup.